compiler-core/src/type_/tests/snapshots/gleam_core__type___tests__errors__unknown_record_field.snap
---
source: compiler-core/src/type_/tests/errors.rs
expression: "\npub type Box(a) { Box(inner: a) }\npub fn main(box: Box(Int)) { box.unknown }\n"
---
----- SOURCE CODE

pub type Box(a) { Box(inner: a) }
pub fn main(box: Box(Int)) { box.unknown }


----- ERROR
error: Unknown record field
  ┌─ /src/one/two.gleam:3:34
  │
3 │ pub fn main(box: Box(Int)) { box.unknown }
  │                                  ^^^^^^^ Did you mean `inner`?

The value being accessed has this type:

    Box(Int)

It has these accessible fields:

    .inner
